Les client s'empilent sur une file d'attente, et disparaissent après avoir fini à la caisse

--- a/ex_magasin/ex_magasin/App.config
+++ b/ex_magasin/ex_magasin/App.config
@@ -11,10 +11,13 @@
     <userSettings>
         <ex_magasin.Properties.Settings>
             <setting name="SIZE_FORM" serializeAs="String">
-                <value>800, 500</value>
+                <value>1000, 700</value>
             </setting>
-            <setting name="SIZE_CHECKOUT" serializeAs="String">
+            <setting name="SIZE_CHECKOUT_CUSTOMER" serializeAs="String">
                 <value>30, 30</value>
+            </setting>
+            <setting name="SIZE_WAITING_QUEUE" serializeAs="String">
+                <value>30, 110</value>
             </setting>
         </ex_magasin.Properties.Settings>
     </userSettings>
