--- a/ex_magasin/ex_magasin/ex_magasin.csproj
+++ b/ex_magasin/ex_magasin/ex_magasin.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Checkout.cs" />
+    <Compile Include="CustomerDoneAtCheckoutEventArgs.cs" />
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
